src/objects/Enhanced_Lookup__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Inactive items will not show in list.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lookup_Description__c</fullName>
        <label>Lookup Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lookup_Value__c</fullName>
        <label>Lookup Value</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>Order of list</description>
        <label>Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lookup_field__c</fullName>
        <label>Lookup Field</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Enhanced Lookup</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>lookup_field__c</columns>
        <columns>Order__c</columns>
        <columns>Lookup_Value__c</columns>
        <columns>Lookup_Description__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Lookup-{0000}</displayFormat>
        <label>Enhanced Lookup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enhanced Lookups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>